--- a/common.gradle
+++ b/common.gradle
@@ -1,21 +1,12 @@
-plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
-    id 'kotlin-kapt'
-}
-
 android {
-    namespace 'com.gordon.studyverifydemo'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.gordon.studyverifydemo"
         minSdk 24
         targetSdk 33
-        versionCode 1
-        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -33,9 +24,8 @@ android {
         jvmTarget = "11"
     }
     buildFeatures {
-        dataBinding true
+        viewBinding true
     }
-
 }
 
 dependencies {
@@ -44,12 +34,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.fragment:fragment-ktx:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation 'androidx.core:core-splashscreen:1.0.1'
     def lifecycle_version = "2.4.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-
-    implementation project(path: ':widget-progressview')
-    implementation project(path: ':common-module')
 }
