--- a/common.gradle
+++ b/common.gradle
@@ -1,9 +1,11 @@
+def versions = rootProject.ext.versions
+def libs = rootProject.ext.dependencies
 android {
-    compileSdk 33
+    compileSdk versions.compileSdk
 
     defaultConfig {
-        minSdk 24
-        targetSdk 33
+        minSdk versions.minSdk
+        targetSdk versions.targetSdk
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -29,12 +31,11 @@ android {
 }
 
 dependencies {
-
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.fragment:fragment-ktx:1.4.0'
-    def lifecycle_version = "2.4.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation libs.androidxCoreKtx
+    implementation libs.androidxCompat
+    implementation libs.material
+    implementation libs.frgKtx
+    implementation libs.constraint
+    implementation libs.viewmodel
+    implementation libs.viewmodelKtx
 }
